<resources>
    <string name="app_name">AutoCamera2</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="edit_detect_area">Edit Detect Area</string>
    <string name="default_interval">60</string>
    <string name="default_threshold">0</string>
    <string name="second_s">second(s)</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="set_interval_prompt">Please set an interval</string>
    <string name="set_an_alarm_threshold">Please set an ALARM threshold</string>
    <string name="done_button">Done Edit Detect Area</string>
    <string name="report_positive">Report Positive</string>
    <string name="report_negative">Report Negative</string>
</resources>