<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <com.example.autocamera2.AutoFitTextureView
            android:id="@+id/textureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp" />

        <com.example.autocamera2.DragRectView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:visibility="gone"
            android:id="@+id/drag"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_an_alarm_threshold"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/default_threshold"
                android:textAlignment="center" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_interval_prompt"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:text="@string/default_interval"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editTextNumber"
                android:layout_alignEnd="@+id/editTextNumber"
                android:text="@string/second_s" />

        </RelativeLayout>

        <ToggleButton
            android:id="@+id/switchCam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:background="@drawable/my_btn_toggle"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
            android:textOff="Flip Camera"
            android:textOn="Flip Camera" />


    </LinearLayout>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/my_btn_toggle"
        android:textColor="@color/white"
        android:textOff="@string/start"
        android:textOn="@string/stop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_button"
            android:visibility="gone"
            android:id="@+id/done"
            android:backgroundTint="@color/teal_700"/>

    </LinearLayout>

</LinearLayout>